--- a/style/index.css
+++ b/style/index.css
@@ -56,6 +56,32 @@ html, body {
     font-family: 'Roboto', sans-serif;
 }
 
+.nav-bar {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    padding: 20px 0px 40px 0px;
+
+}
+
+.nav-bar img{
+    padding-left: 0px;
+}
+
+.nav-bar a{
+    padding: 0px 39px 0px 39px;
+    text-decoration: none;
+    color: black;
+}
+
+.nav-img{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100%;
+    padding: 0px 0px 30px 0px;
+}
+
 h1, h2, h3, h4, h5 {
     font-size: 18px;
     margin-bottom: 15px;
